--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ backcall==0.2.0
 cycler==0.11.0
 decorator==5.1.1
 fonttools==4.28.5
+imbalanced-learn==0.8.0
 ipython==7.31.0
 jedi==0.18.1
 joblib==1.1.0
